src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-59.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"#comment\\nfoo\")"
---
- token: comment
  stream: "#comment"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 8
      line: 0
      column: 8
- token: break
  stream: "\n"
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 1
      column: 0
- severity: error
  message: "documents must be separated by a marker line ('...' or '---')"
  span:
    start:
      index: 9
      line: 1
      column: 0
    end:
      index: 9
      line: 1
      column: 0
  stream: ""
- value:
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 9
      line: 1
      column: 0
    end:
      index: 12
      line: 1
      column: 3

