src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-63.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"\\u{feff}--- foo\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: directives_end
  stream: "---"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 6
      line: 0
      column: 6
- token: separator
  stream: " "
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 7
      line: 0
      column: 7
- value:
    explicit: true
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 10
      line: 0
      column: 10

